fix overflow issue

--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -17,7 +17,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0px 30px;
     width: 100%;
     max-width: 1000px;
 }
